--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# deps
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# env files (keep the template tracked)
+.env
+.env.*
+!.env.example
 
 # testing
-/coverage
+coverage/
 
-# production
-/build
+# production/build
+build/
+dist/
 
-# misc
+# package managers / PnP
+.pnp
+.pnp.js
+
+# caches
+.eslintcache
+.cache/
+.parcel-cache/
+
+# OS cruft
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+*.log
